[project]
name = "comfyui-prompter-fofrai"
description = "A prompt helper for ComfyUI, based on prompter.fofr.ai"
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/fofr/comfyui-prompter-fofrai"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fofr"
DisplayName = "ComfyUI-Prompter-fofrAI"
Icon = "🪴"
